--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "ghost": "0.11.2",
-    "ghost-s3-storage": "~0.2.2",
+    "ghost-s3-storage-adapter": "3.0.4",
     "ncp": "^2.0.0",
     "pg": "latest",
     "podcast": "^0.2.2",
