--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   "private": true,
   "version": "0.11.3",
   "dependencies": {
-    "casper": "TryGhost/Casper#1.3.4",
-    "ghost": "0.11.3",
+    "body-parser": "*",
+    "cookie-parser": "*",
+    "ejs": "*",
+    "express": "*",
+    "ghost": "0.11.7",
     "ghost-s3-storage-adapter": "3.0.4",
-    "ncp": "^2.0.0",
     "pg": "latest",
     "podcast": "^0.2.2",
-    "serve-favicon": "^2.3.0",
-    "express": "*",
-    "ejs": "*",
-    "body-parser": "*",
-    "cookie-parser": "*"
+    "serve-favicon": "^2.3.0"
   },
   "engines": {
-    "node": "~0.12.0"
+    "node": "^6.9.0"
   },
   "scripts": {
-    "postinstall": "ncp node_modules/casper content/themes/casper",
-    "start": "node server.js"
+    "start": "nf start",
+    "local": "nf start dev"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.8"
   }
 }
