--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop -o",
+    "dev": "gatsby develop",
     "serve": "gatsby build && gatsby serve"
   },
   "devDependencies": {
